test/functions/compilation-errors/error-stack-trace-task-fn4.chpl


proc baz(arg) {
  arg = 1;
}

proc bar(arg) {
  cobegin {
    {baz(arg);}
    {}
  }
}
proc foo(arg) {
  bar(arg);
}

foo("hi");
